adicionando paginas - navegação

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "petHug",
-    "slug": "petHug",
+    "name": "pet-teste",
+    "slug": "pet-teste",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -20,16 +20,24 @@
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "edgeToEdgeEnabled": true
+      "edgeToEdgeEnabled": true,
+      "predictiveBackGestureEnabled": false
     },
     "web": {
       "favicon": "./assets/favicon.png"
     },
-    "plugins": [
+      "plugins": [
       [
-      "expo-font", 
-      {"fonts": ["./assets/Itim-Regular.ttf", "./assets/Poppins-Bold.ttf", "./assets/Poppins-Regular.ttf"]}
-    ]
+        "expo-font",
+        {
+          "fonts": [
+            "./assets/Itim-Regular.ttf",
+            "./assets/Poppins-Bold.ttf",
+            "./assets/Poppins-Regular.ttf"
+          ]
+        }
+      ],
+      "expo-asset"
     ]
   }
 }
