--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.2",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-picker/picker": "^2.11.2",
     "@react-navigation/bottom-tabs": "^7.4.7",
     "@react-navigation/drawer": "^7.5.8",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.3.26",
+    "@supabase/supabase-js": "^2.78.0",
+    "base64-arraybuffer": "^1.0.2",
     "expo": "~54.0.13",
     "expo-asset": "^12.0.9",
     "expo-camera": "~17.0.8",
@@ -24,6 +27,7 @@
     "expo-image-picker": "~17.0.8",
     "expo-location": "~19.0.7",
     "expo-media-library": "~18.2.0",
+    "expo-secure-store": "^15.0.7",
     "expo-status-bar": "~3.0.8",
     "expo-video": "~3.0.11",
     "lottie-react-native": "^7.3.4",
@@ -36,6 +40,7 @@
     "react-native-reanimated": "~4.1.0",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
+    "react-native-url-polyfill": "^3.0.0",
     "react-native-worklets": "0.5.1",
     "react-test-renderer": "^19.1.0",
     "uuid": "^13.0.0"
