--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@expo/vector-icons": "^15.0.2",
     "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-community/netinfo": "^11.4.1",
     "@react-native-picker/picker": "^2.11.2",
     "@react-navigation/bottom-tabs": "^7.4.7",
     "@react-navigation/drawer": "^7.5.8",
@@ -28,14 +29,16 @@
     "expo-location": "~19.0.7",
     "expo-media-library": "~18.2.0",
     "expo-secure-store": "^15.0.7",
+    "expo-sqlite": "^16.0.9",
     "expo-status-bar": "~3.0.8",
     "expo-video": "~3.0.11",
+    "haversine-distance": "^1.2.4",
     "lottie-react-native": "^7.3.4",
     "react": "^19.1.0",
     "react-native": "0.81.4",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-google-places-autocomplete": "^2.5.7",
-    "react-native-maps": "1.20.1",
+    "react-native-maps": "^1.20.1",
     "react-native-maps-directions": "^1.9.0",
     "react-native-reanimated": "~4.1.0",
     "react-native-safe-area-context": "~5.6.0",
