--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@types/uuid": "^10.0.0",
     "jest": "~29.7.0",
     "jest-expo": "^54.0.12",
+    "react-native-dotenv": "^3.4.11",
     "ts-jest": "^29.4.5",
     "typescript": "~5.9.2"
   },
